[metadata]
name = IS-DNX
version = 2.1
author = Daniel Puente Ramírez
author_email = dani.pr21@gmail.com
description = Instance Selection Algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dpr1005/Semisupervised-learning-and-instance-selection-methods
project_urls =
    Bug Tracker = https://github.com/dpr1005/Semisupervised-learning-and-instance-selection-methods/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir =
    = instance_selection
packages = find:
python_requires = >=3.6

[options.packages.find]
where = instance_selection